--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@shopify/remix-oxygen": "^2.0.3",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
+    "framer-motion": "^11.0.8",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "isbot": "^3.6.5",
